Bugfix: Proper ordering songs on multi-disc albums.
git-svn-id: https://subsonic.svn.sourceforge.net/svnroot/subsonic/trunk@1492 24148959-8e0e-0410-9c20-a6ce11f09cd5